--- a/store/db.yml
+++ b/store/db.yml
@@ -1,10 +1,10 @@
-version: '3'
+version: '3.7'
 services:
   mongodb:
     container_name: nyup-mongodb
     image: mongo:latest
-    ports:
-      - '27017:27017'
+#    ports:
+#      - '27017:27017'
     environment:
       - 'MONGO_INITDB_ROOT_USERNAME=admin'
       - 'MONGO_INITDB_ROOT_PASSWORD=admin'
@@ -17,8 +17,8 @@ services:
   redis:
     container_name: nyup-redis
     image: redis:latest
-    ports:
-      - '6379:6379'
+#    ports:
+#      - '6379:6379'
     volumes:
       - 'nyup-redis:/data:rw'
       - '/etc/timezone:/etc/timezone:ro'
