--- a/store/db.dev.yml
+++ b/store/db.dev.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   mongodb:
-    container_name: nyup-mongodb
+    container_name: nyup-dev-mongodb
     image: mongo:latest
     ports:
       - '27017:27017'
@@ -15,7 +15,7 @@ services:
       - '/etc/localtime:/etc/localtime:ro'
 
   redis:
-    container_name: nyup-redis
+    container_name: nyup-dev-redis
     image: redis:latest
     ports:
       - '6379:6379'
