--- a/sourced/Makefile
+++ b/sourced/Makefile
@@ -1,4 +1,9 @@
-node_modules:
+.PHONY: run
+run:
+	[ -d node_modules ] || $(MAKE) deps
+	@echo "### Starting sourced"
+	- yarn run start
+
+deps:
+	@echo "### Installing dependencies"
 	yarn
-run: node_modules
-	yarn run start
