remove err ignore

--- a/sourced/Makefile
+++ b/sourced/Makefile
@@ -2,7 +2,7 @@
 run:
 	[ -d node_modules ] || $(MAKE) deps
 	@echo "### Starting sourced"
-	- yarn run start
+	yarn run start
 
 deps:
 	@echo "### Installing dependencies"
