add yarn.lock to clean

--- a/sourced/Makefile
+++ b/sourced/Makefile
@@ -5,5 +5,10 @@ run:
 	yarn run start
 
 deps:
-	@echo "### Installing dependencies"
+	@echo "### Installing sourced dependencies"
 	yarn
+
+.PHONY: clean
+clean:
+	@echo "### Cleaning sourced"
+	rm -rf node_modules package-lock.json yarn.lock
