venv looks prettier

--- a/statusd/Makefile
+++ b/statusd/Makefile
@@ -7,22 +7,22 @@ help:
 .PHONY: run
 run: venv
 	@echo "### Starting statusd"
-	./.venv/bin/python3 main.py
+	./venv/bin/python3 main.py
 
 .PHONY: venv
 venv:
-	@if [ ! -d .venv ]; then \
+	@if [ ! -d venv ]; then \
   		echo "### Creating statusd virtual environment"; \
-		$(PYTHON) -m venv .venv; \
-		./.venv/bin/python3 -m pip install --upgrade pip; \
-		./.venv/bin/pip install -r requirements.txt; \
-#		./.venv/bin/activate; \
+		$(PYTHON) -m venv venv; \
+		./venv/bin/python3 -m pip install --upgrade pip; \
+		./venv/bin/pip install -r requirements.txt; \
+#		./venv/bin/activate; \
 	fi
 
 .PHONY: seed
 seed: venv
 	@echo "### Seeding database"
-	./.venv/bin/python3 seeder.py
+	./venv/bin/python3 seeder.py
 
 .PHONY: req
 requirements: venv
@@ -32,4 +32,4 @@ requirements: venv
 .PHONY: clean
 clean:
 	@echo "### Deleting statusd virtual environment"
-	rm -rf $$(find -name __pycache__) .venv
+	rm -rf $$(find -name __pycache__) venv
