--- a/statusd/requirements.txt
+++ b/statusd/requirements.txt
@@ -2,6 +2,7 @@ Flask
 Flask-SQLAlchemy
 Flask-Migrate
 Flask-Script
+flask_login
 psycopg2-binary
 itsdangerous==2.0.1
 asgiref
@@ -9,3 +10,4 @@ oauth2client~=4.1.3
 aiohttp~=3.8.4
 gunicorn
 pytz
+requests
