add help and docker build targets

--- a/sourced/Makefile
+++ b/sourced/Makefile
@@ -1,3 +1,7 @@
+help:
+	@echo '### Available make targets:'
+	@grep PHONY: Makefile | cut -d: -f2 | sed '1d;s/^/make/'
+
 .PHONY: run
 run:
 	[ -d node_modules ] || $(MAKE) deps
@@ -8,7 +12,15 @@ deps:
 	@echo "### Installing sourced dependencies"
 	yarn
 
+
+.PHONY: dkbuild
+dkbuild:
+	@echo "### Building sourced docker image"
+	docker build -t sourced:latest .
+
+
 .PHONY: clean
 clean:
 	@echo "### Cleaning sourced"
 	rm -rf node_modules package-lock.json yarn.lock
+
