--- a/store/Makefile
+++ b/store/Makefile
@@ -2,8 +2,8 @@ help:
 	@echo '### Available make targets:'
 	@grep PHONY: Makefile | cut -d: -f2 | sed '1d;s/^/make/'
 
-.PHONY: run
-run:
+.PHONY: start
+start:
 	@echo "### Starting DB services"
 	docker compose -f docker-compose-dev.yml up -d
 
@@ -12,7 +12,7 @@ stop:
 	@echo "### Stopping DB services"
 	docker compose -f docker-compose-dev.yml stop
 
-.PHONY: reset
-reset:
+.PHONY: delete
+delete:
 	@echo "### Deleting DB services"
 	docker compose -f docker-compose-dev.yml down -v
