--- a/updated/Dockerfile
+++ b/updated/Dockerfile
@@ -3,5 +3,5 @@ FROM python:3.11-alpine
 COPY . /updated
 WORKDIR /updated
 
-RUN pip install -r requirements.txt
+RUN pip3 install -r requirements.txt
 CMD ["python3", "main.py"]
